--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sabarigirish Manikandan - Software Developer and Student</title>
+    <title>Sabarigirish Manikandan - Student Software Developer</title>
   </head>
   <body>
     <div id="app"></div>
